RequestHandlerUtils refactored, reinforced and improved (properly treat blank query parameters, treat typed parameters, treat optional query parameters, UUID support)