@@ -6,10 +6,7 @@ import ru.tinkoff.kora.http.server.common.HttpServerResponseException;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import javax.annotation.ParametersAreNonnullByDefault;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -20,9 +17,8 @@ public final class RequestHandlerUtils {
     private RequestHandlerUtils() {}
 
     /*
-     * Path: String, UUID, Integer, Long, Double, Enum<?>
+     * Path: String, UUID, Integer, Long, Double, Enum
      */
-
     @Nonnull
     public static String parseStringPathParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
         var result = request.pathParams().get(name);
@@ -32,11 +28,14 @@ public final class RequestHandlerUtils {
         return result;
     }
 
+    @Nonnull
     public static UUID parseUUIDPathParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
         var result = request.pathParams().get(name);
         if (result == null) {
             throw HttpServerResponseException.of(400, "Path parameter '%s' is required".formatted(name));
         }
+
+
         try {
             return UUID.fromString(result);
         } catch (IllegalArgumentException e) {
@@ -49,6 +48,7 @@ public final class RequestHandlerUtils {
         if (result == null) {
             throw HttpServerResponseException.of(400, "Path parameter '%s' is required".formatted(name));
         }
+
         try {
             return Integer.parseInt(result);
         } catch (NumberFormatException e) {
@@ -61,6 +61,7 @@ public final class RequestHandlerUtils {
         if (result == null) {
             throw HttpServerResponseException.of(400, "Path parameter '%s' is required".formatted(name));
         }
+
         try {
             return Long.parseLong(result);
         } catch (NumberFormatException e) {
@@ -73,6 +74,7 @@ public final class RequestHandlerUtils {
         if (result == null) {
             throw HttpServerResponseException.of(400, "Path parameter '%s' is required".formatted(name));
         }
+
         try {
             return Double.parseDouble(result);
         } catch (NumberFormatException e) {
@@ -86,6 +88,7 @@ public final class RequestHandlerUtils {
         if (result == null) {
             throw HttpServerResponseException.of(400, "Path parameter '%s' is required".formatted(name));
         }
+
         try {
             return Enum.valueOf(enumType, result);
         } catch (Exception exception) {
@@ -96,7 +99,6 @@ public final class RequestHandlerUtils {
     /*
      * Headers: String, Integer, List<String>, List<Integer>
      */
-
     @Nonnull
     public static String parseStringHeaderParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
         var result = request.headers().get(name);
@@ -135,7 +137,7 @@ public final class RequestHandlerUtils {
             .flatMap(h -> Stream.of(h.split(",")))
             .map(String::trim)
             .filter(Predicate.not(String::isBlank))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public static int parseIntegerHeaderParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
@@ -143,7 +145,12 @@ public final class RequestHandlerUtils {
         if (result == null || result.isEmpty()) {
             throw HttpServerResponseException.of(400, "Header '%s' is required".formatted(name));
         }
+
         var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Header '%s' has invalid blank string value".formatted(name));
+        }
+
         try {
             return Integer.parseInt(first);
         } catch (NumberFormatException e) {
@@ -157,7 +164,12 @@ public final class RequestHandlerUtils {
         if (result == null || result.isEmpty()) {
             return null;
         }
+
         var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Header '%s' has invalid blank string value".formatted(name));
+        }
+
         try {
             return Integer.parseInt(first);
         } catch (NumberFormatException e) {
@@ -170,7 +182,6 @@ public final class RequestHandlerUtils {
         if (result == null) {
             throw HttpServerResponseException.of(400, "Header '%s' is required".formatted(name));
         }
-
         return result;
     }
 
@@ -201,22 +212,49 @@ public final class RequestHandlerUtils {
             }
         }
 
-        return result;
+        return List.copyOf(result);
     }
 
-
     /*
-        Query: String, Integer, Long, Double, Boolean, Enum<?>, List<String>, List<Integer>, List<Long>, List<Double>, List<Boolean>, List<Enum<?>>, UUID
+     * Query: String, Integer, Long, Double, Boolean, Enum, UUID
      */
-
     @Nonnull
-    public static String parseStringQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
+    public static UUID parseUuidQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalUuidQueryParameter(request, name);
+        if (result == null) {
             throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
         }
 
-        return result.iterator().next();
+        return result;
+    }
+
+    @Nullable
+    public static UUID parseOptionalUuidQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null || result.isEmpty()) {
+            return null;
+        }
+
+        var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+        }
+
+        try {
+            return UUID.fromString(first);
+        } catch (IllegalArgumentException e) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid value '%s'".formatted(name, result));
+        }
+    }
+
+    @Nonnull
+    public static String parseStringQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalStringQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+
+        return result;
     }
 
     @Nullable
@@ -225,29 +263,16 @@ public final class RequestHandlerUtils {
         if (result == null || result.isEmpty()) {
             return null;
         }
+
         return result.iterator().next();
     }
 
-    public static List<String> parseStringListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null) {
-            return List.of();
-        }
-        return List.copyOf(result);
-    }
-
-
     public static int parseIntegerQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
+        var result = parseOptionalIntegerQueryParameter(request, name);
+        if (result == null) {
             throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
         }
-        var first = result.iterator().next();
-        try {
-            return Integer.parseInt(first);
-        } catch (NumberFormatException e) {
-            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
-        }
+        return result;
     }
 
     @Nullable
@@ -256,7 +281,12 @@ public final class RequestHandlerUtils {
         if (result == null || result.isEmpty()) {
             return null;
         }
-        var first = result.iterator().next();
+
+        var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+        }
+
         try {
             return Integer.parseInt(first);
         } catch (NumberFormatException e) {
@@ -264,37 +294,12 @@ public final class RequestHandlerUtils {
         }
     }
 
-    public static List<Integer> parseIntegerListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null) {
-            return List.of();
-        }
-        return result.stream()
-            .map(v -> {
-                if (v == null || v.isBlank()) {
-                    return null;
-                }
-                try {
-                    return Integer.parseInt(v);
-                } catch (NumberFormatException e) {
-                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
-                }
-            })
-            .collect(Collectors.toList());
-    }
-
-
     public static long parseLongQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
+        var result = parseOptionalLongQueryParameter(request, name);
+        if (result == null) {
             throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
         }
-        var first = result.iterator().next();
-        try {
-            return Long.parseLong(first);
-        } catch (NumberFormatException e) {
-            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
-        }
+        return result;
     }
 
     @Nullable
@@ -303,7 +308,12 @@ public final class RequestHandlerUtils {
         if (result == null || result.isEmpty()) {
             return null;
         }
-        var first = result.iterator().next();
+
+        var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+        }
+
         try {
             return Long.parseLong(first);
         } catch (NumberFormatException e) {
@@ -311,123 +321,7 @@ public final class RequestHandlerUtils {
         }
     }
 
-    public static List<Long> parseLongListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null) {
-            return List.of();
-        }
-        return result.stream()
-            .map(v -> {
-                if (v == null || v.isBlank()) {
-                    return null;
-                }
-                try {
-                    return Long.parseLong(v);
-                } catch (NumberFormatException e) {
-                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
-                }
-            })
-            .collect(Collectors.toList());
-    }
-
-
-    public static double parseDoubleQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
-            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
-        }
-        var first = result.iterator().next();
-        try {
-            return Double.parseDouble(first);
-        } catch (NumberFormatException e) {
-            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
-        }
-    }
-
-    @Nullable
-    public static Double parseOptionalDoubleQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
-            return null;
-        }
-        var first = result.iterator().next();
-        try {
-            return Double.parseDouble(first);
-        } catch (NumberFormatException e) {
-            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
-        }
-    }
-
-    public static List<Double> parseDoubleListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null) {
-            return List.of();
-        }
-        return result.stream()
-            .map(v -> {
-                if (v == null || v.isBlank()) {
-                    return null;
-                }
-                try {
-                    return Double.parseDouble(v);
-                } catch (NumberFormatException e) {
-                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
-                }
-            })
-            .collect(Collectors.toList());
-    }
-
-
-    public static Boolean parseBooleanQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
-            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
-        }
-        var first = result.iterator().next();
-        try {
-            // todo
-            return Boolean.parseBoolean(first);
-        } catch (NumberFormatException e) {
-            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
-        }
-    }
-
-    @Nullable
-    public static Boolean parseOptionalBooleanQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null || result.isEmpty()) {
-            return null;
-        }
-        var first = result.iterator().next();
-        try {
-            // todo
-            return Boolean.parseBoolean(first);
-        } catch (NumberFormatException e) {
-            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
-        }
-    }
-
-    public static List<Boolean> parseBooleanListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
-        var result = request.queryParams().get(name);
-        if (result == null) {
-            return List.of();
-        }
-        return result.stream()
-            .map(v -> {
-                // todo
-                if (v == null || v.isBlank()) {
-                    return null;
-                }
-                try {
-                    return Boolean.parseBoolean(v);
-                } catch (NumberFormatException e) {
-                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
-                }
-            })
-            .collect(Collectors.toList());
-    }
-
-
+    @Nonnull
     public static <T extends Enum<T>> T parseEnumQueryParameter(HttpServerRequest request, Class<T> type, String name) throws HttpServerResponseException {
         var result = parseOptionalEnumQueryParameter(request, type, name);
         if (result == null) {
@@ -442,7 +336,12 @@ public final class RequestHandlerUtils {
         if (result == null || result.isEmpty()) {
             return null;
         }
-        var first = result.iterator().next();
+
+        var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+        }
+
         try {
             return Enum.valueOf(type, first);
         } catch (Exception exception) {
@@ -450,16 +349,272 @@ public final class RequestHandlerUtils {
         }
     }
 
-    public static <T extends Enum<T>> List<T> parseEnumListQueryParameter(HttpServerRequest request, Class<T> type, String name) throws HttpServerResponseException {
+    public static boolean parseBooleanQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalBooleanQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static Boolean parseOptionalBooleanQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null || result.isEmpty()) {
+            return null;
+        }
+
+        var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+        }
+
+        try {
+            // todo
+            return Boolean.parseBoolean(first);
+        } catch (NumberFormatException e) {
+            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
+        }
+    }
+
+    public static double parseDoubleQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalDoubleQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static Double parseOptionalDoubleQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null || result.isEmpty()) {
+            return null;
+        }
+
+        var first = result.iterator().next().trim();
+        if (first.isEmpty()) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+        }
+
+        try {
+            return Double.parseDouble(first);
+        } catch (NumberFormatException e) {
+            throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, first));
+        }
+    }
+
+    /*
+     * Query: List<String>, List<Integer>, List<Long>, List<Double>, List<Boolean>, List<UUID>, List<Enum>
+     */
+    @Nonnull
+    public static List<Integer> parseIntegerListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalIntegerListQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static List<Integer> parseOptionalIntegerListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
         var result = request.queryParams().get(name);
         if (result == null) {
-            return List.of();
+            return null;
         }
+
         return result.stream()
+            .filter(Objects::nonNull)
             .map(v -> {
-                if (v == null || v.isBlank()) {
-                    return null;
+                v = v.trim();
+                if (v.isEmpty()) {
+                    throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
                 }
+
+                try {
+                    return Integer.parseInt(v);
+                } catch (NumberFormatException e) {
+                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
+                }
+            })
+            .toList();
+    }
+
+    @Nonnull
+    public static List<UUID> parseUuidListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalUuidListQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static List<UUID> parseOptionalUuidListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream()
+            .filter(Objects::nonNull)
+            .map(v -> {
+                v = v.trim();
+                if (v.isEmpty()) {
+                    throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+                }
+
+                try {
+                    return UUID.fromString(v);
+                } catch (IllegalArgumentException e) {
+                    throw HttpServerResponseException.of(400, "Path parameter '%s' has invalid value '%s'".formatted(name, result));
+                }
+            })
+            .toList();
+    }
+
+    @Nonnull
+    public static List<String> parseStringListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalStringListQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static List<String> parseOptionalStringListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream().toList();
+    }
+
+    @Nonnull
+    public static List<Long> parseLongListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalLongListQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static List<Long> parseOptionalLongListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream()
+            .filter(Objects::nonNull)
+            .map(v -> {
+                v = v.trim();
+                if (v.isEmpty()) {
+                    throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+                }
+
+                try {
+                    return Long.parseLong(v);
+                } catch (NumberFormatException e) {
+                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
+                }
+            })
+            .toList();
+    }
+
+    @Nonnull
+    public static List<Double> parseDoubleListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalDoubleListQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static List<Double> parseOptionalDoubleListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream()
+            .filter(Objects::nonNull)
+            .map(v -> {
+                v = v.trim();
+                if (v.isEmpty()) {
+                    throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+                }
+
+                try {
+                    return Double.parseDouble(v);
+                } catch (NumberFormatException e) {
+                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
+                }
+            })
+            .toList();
+    }
+
+    @Nonnull
+    public static List<Boolean> parseBooleanListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = parseOptionalBooleanListQueryParameter(request, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static List<Boolean> parseOptionalBooleanListQueryParameter(HttpServerRequest request, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream()
+            .filter(Objects::nonNull)
+            .map(v -> {
+                v = v.trim();
+                if (v.isEmpty()) {
+                    throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+                }
+
+                try {
+                    return Boolean.parseBoolean(v);
+                } catch (NumberFormatException e) {
+                    throw HttpServerResponseException.of(400, "Query parameter %s(%s) has invalid value".formatted(name, v));
+                }
+            })
+            .toList();
+    }
+
+    @Nonnull
+    public static <T extends Enum<T>> List<T> parseEnumListQueryParameter(HttpServerRequest request, Class<T> type, String name) throws HttpServerResponseException {
+        var result = parseOptionalEnumListQueryParameter(request, type, name);
+        if (result == null) {
+            throw HttpServerResponseException.of(400, "Query parameter '%s' is required".formatted(name));
+        }
+        return result;
+    }
+
+    @Nullable
+    public static <T extends Enum<T>> List<T> parseOptionalEnumListQueryParameter(HttpServerRequest request, Class<T> type, String name) throws HttpServerResponseException {
+        var result = request.queryParams().get(name);
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream()
+            .filter(Objects::nonNull)
+            .map(v -> {
+                v = v.trim();
+                if (v.isEmpty()) {
+                    throw HttpServerResponseException.of(400, "Query parameter '%s' has invalid blank string value".formatted(name));
+                }
+
                 try {
                     return Enum.valueOf(type, v);
                 } catch (Exception exception) {
@@ -468,5 +623,4 @@ public final class RequestHandlerUtils {
             })
             .collect(Collectors.toList());
     }
-
 }
